--- a/config/homebrew/brew.conf
+++ b/config/homebrew/brew.conf
@@ -1,18 +1,29 @@
-#! /usr/bin/env zsh
+#! /usr/bin/env bash
 
+# main homebrew envars
+export HOMEBREW_PREFIX="/opt/homebrew"
+export HOMEBREW_REPOSITORY="$HOMEBREW_PREFIX"
+export HOMEBREW_CELLAR="$HOMEBREW_PREFIX/Cellar"
+
+# integrates sharkp/bat with homebrew
 export HOMEBREW_BAT=1
+export HOMEBREW_BAT_CONFIG_PATH=1
+export HOMEBREW_BAT_CONFIG_PATH="$BAT_CONFIG_PATH/bat.conf"
+
 export HOMEBREW_NO_ANALYTICS=1
 export HOMEBREW_NO_ENV_HINTS=1
-export HOMEBREW_BAT_CONFIG_PATH=1
 export HOMEBREW_NO_INSECURE_REDIRECT=1
+
+export HOMEBREW_CLEANUP_PERIODIC_FULL_DAYS=30
+export HOMEBREW_CLEANUP_PERIODIC_OUTDATED=trueexport
+
 export HOMEBREW_CACHE="$XDG_CACHE_HOME/homebrew" && mkdir -p "$HOMEBREW_CACHE"
 export HOMEBREW_CASK_OPTS="--appdir=$HOME/Applications --fontdir=/Library/Fonts "
-export HOMEBREW_BAT_CONFIG_PATH="$XDG_CONFIG_HOME/bat/bat.conf"
-export HOMEBREW_CLEANUP_PERIODIC_FULL_DAYS=30
-export HOMEBREW_CLEANUP_PERIODIC_OUTDATED=trueexport HOMEBREW_PREFIX="/Users/akuttor/.local/share/zinit/plugins/brew";
-export HOMEBREW_CELLAR="/Users/akuttor/.local/share/zinit/plugins/brew/Cellar";
-export HOMEBREW_REPOSITORY="/Users/akuttor/.local/share/zinit/plugins/brew";
-fpath[1,0]="/Users/akuttor/.local/share/zinit/plugins/brew/share/zsh/site-functions";
-export PATH="/Users/akuttor/.local/share/zinit/plugins/brew/bin:/Users/akuttor/.local/share/zinit/plugins/brew/sbin${PATH+:$PATH}";
-[ -z "${MANPATH-}" ] || export MANPATH=":${MANPATH#:}";
-export INFOPATH="/Users/akuttor/.local/share/zinit/plugins/brew/share/info:${INFOPATH:-}";
+
+# add homebrew to fpath and path
+export FPATH="$HOMEBREW_PREFIX/share/zsh/site-functions:$FPATH"
+export PATH="$HOMEBREW_PREFIX/{bin,sbin}:$PATH"
+
+# helps compilers find curl and other dependencies in homebrew
+export LDFLAGS="-L/$HOMEBREW_PREFIX/opt/curl/lib"
+export CPPFLAGS="-I/$HOMEBREW_PREFIX/opt/curl/include"
