--- a/config/zoxide/zoxide.conf
+++ b/config/zoxide/zoxide.conf
@@ -81,8 +81,7 @@ then
 
   \builtin zle -N __zoxide_z_complete_helper
 
-  [[ ${+functions[compdef]} -ne 0 ]] && \compdef __zoxide_z_complete z
-fi
+#  [[ ${+functions[compdef]} -ne 0 ]] && \compdef __zoxide_z_complete zn fi
 
 eval "$(zoxide init zsh)"
 
