--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -62,3 +62,51 @@ set -g @fzf-url-bind ''
 
 
 set -ga terminal-overrides ",*-256color:Tc"
+
+# theme
+set -g @plugin 'catppuccin/tmux#v2.1.2'
+set -g @catppuccin_flavor 'mocha'
+
+set -g @catppuccin_status_background "default"
+
+set -g @catppuccin_window_left_separator ""
+set -g @catppuccin_window_right_separator " "
+set -g @catppuccin_window_middle_separator " █"
+set -g @catppuccin_window_number_position "right"
+set -g @catppuccin_window_default_fill "number"
+
+set -g @catppuccin_window_default_text "#W"
+
+set -g @catppuccin_window_current_fill "number"
+set -g @catppuccin_window_current_text "#W"
+
+set -g @catppuccin_status_modules_left "session"
+set -g @catppuccin_status_modules_right "application host"
+set -g @catppuccin_status_left_separator  " "
+set -g @catppuccin_status_right_separator ""
+set -g @catppuccin_status_fill "icon"
+set -g @catppuccin_status_connect_separator "no"
+
+set -g @catppuccin_directory_text "#{pane_current_path}"
+
+# Session resurrect
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @resurrect-save 'C-w'
+set -g @resurrect-capture-pane-contents 'on'
+set -g @continuum-restore 'on'
+set -g @continuum-boot 'on'
+set -g @continuum-boot-options 'kitty'
+set -g @continuum-save-interval '10'
+
+# reindexing for easier navigation
+set -g base-index 1
+set -g pane-base-index 1
+set-window-option -g pane-base-index 1
+set-option -g renumber-windows on
+
+# optimization for nvim
+set-option -g focus-events on
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
