creates replacement editorconfig and fixes brew manpages

--- a/config/homebrew/brew.conf
+++ b/config/homebrew/brew.conf
@@ -18,11 +18,22 @@ export HOMEBREW_CLEANUP_PERIODIC_FULL_DAYS=30
 export HOMEBREW_CLEANUP_PERIODIC_OUTDATED=trueexport
 
 export HOMEBREW_CACHE="$XDG_CACHE_HOME/homebrew" && mkdir -p "$HOMEBREW_CACHE"
-export HOMEBREW_CASK_OPTS="--appdir=$HOME/Applications --fontdir=/Library/Fonts "
+export HOMEBREW_CASK_OPTS="--app
+
+export MANPATH="$HOMEBREW_PREFIX/share/man:$MANPATH"
+export MANPATH="$HOMEBREW_PREFIX/manpages:$MANPATH"
+export PATH="$HOMEBREW_PREFIX/bin:$PATH"
+ME/Applications --fontdir=/Library/Fonts "
 
 # add homebrew to fpath and path
+
+export MANPATH="$HOMEBREW_PREFIX/share/man:$MANPATH"
+export MANPATH="$HOMEBREW_PREFIX/manpages:$MANPATH"
+export PATH="$HOMEBREW_PREFIX/bin:$PATH"
+
 export FPATH="$HOMEBREW_PREFIX/share/zsh/site-functions:$FPATH"
 export PATH="$HOMEBREW_PREFIX/{bin,sbin}:$PATH"
+
 
 # helps compilers find curl and other dependencies in homebrew
 export LDFLAGS="-L/$HOMEBREW_PREFIX/opt/curl/lib"
