--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -53,3 +53,10 @@ updates:
       interval: daily
     allow:
       - dependency-type: all
+
+  - package-ecosystem: pip
+    directory: /Library/Homebrew/formula-analytics/
+    schedule:
+      interval: daily
+    allow:
+      - dependency-type: all
