--- a/config/homebrew/brew.conf
+++ b/config/homebrew/brew.conf
@@ -1,4 +1,4 @@
-#! /usr/bin/env bash
+#! /usr/bin/env sh
 
 # main homebrew envars
 export HOMEBREW_PREFIX="/opt/homebrew"
@@ -18,14 +18,25 @@ export HOMEBREW_CLEANUP_PERIODIC_FULL_DAYS=30
 export HOMEBREW_CLEANUP_PERIODIC_OUTDATED=trueexport
 
 export HOMEBREW_CACHE="$XDG_CACHE_HOME/homebrew" && mkdir -p "$HOMEBREW_CACHE"
-export HOMEBREW_CASK_OPTS="--app
-
-export MANPATH="$HOMEBREW_PREFIX/share/man:$MANPATH"
-export MANPATH="$HOMEBREW_PREFIX/manpages:$MANPATH"
-export PATH="$HOMEBREW_PREFIX/bin:$PATH"
-ME/Applications --fontdir=/Library/Fonts "
+export HOMEBREW_CASK_OPTS="--appdir=/Applications"
 
 # add homebrew to fpath and path
+fpath[1,0]="/opt/homebrew/share/zsh/site-functions"
+export PATH="
+/opt/homebrew/bin:
+/opt/homebrew/sbin:
+/Users/akuttor/.local/share/zinit/plugins/git-ignore/bin:
+/Users/akuttor/.config/rbenv/shims:
+/Users/akuttor/.local/share/zinit/polaris/bin:
+/usr/local/bin:
+/System/Cryptexes/App/usr/bin:
+/usr/bin:/bin:/usr/sbin:/sbin:
+/var/run/com.apple.security.cryptexd/codex.system/bootstrap/usr/local/bin:
+/var/run/com.apple.security.cryptexd/codex.system/bootstrap/usr/bin:
+/var/run/com.apple.security.cryptexd/codex.system/bootstrap/usr/appleinternal/bin:
+/Users/akuttor/.config/rust/cargo/bin:
+/Applications/iTerm.app/Contents/Resources/utilities"
+
 
 export MANPATH="$HOMEBREW_PREFIX/share/man:$MANPATH"
 export MANPATH="$HOMEBREW_PREFIX/manpages:$MANPATH"
