--- a/config/homebrew/brew.conf
+++ b/config/homebrew/brew.conf
@@ -1,5 +1,7 @@
 #! /usr/bin/env bash
 
+eval "$(/opt/homebrew/bin/brew shellenv)"
+
 # main homebrew envars
 export HOMEBREW_PREFIX="/opt/homebrew"
 export HOMEBREW_REPOSITORY="$HOMEBREW_PREFIX"
@@ -18,21 +20,14 @@ export HOMEBREW_CLEANUP_PERIODIC_FULL_DAYS=30
 export HOMEBREW_CLEANUP_PERIODIC_OUTDATED=trueexport
 
 export HOMEBREW_CACHE="$XDG_CACHE_HOME/homebrew" && mkdir -p "$HOMEBREW_CACHE"
-export HOMEBREW_CASK_OPTS="--app
-
-export MANPATH="$HOMEBREW_PREFIX/share/man:$MANPATH"
-export MANPATH="$HOMEBREW_PREFIX/manpages:$MANPATH"
-export PATH="$HOMEBREW_PREFIX/bin:$PATH"
-ME/Applications --fontdir=/Library/Fonts "
+export HOMEBREW_CASK_OPTS="--appME/Applications --fontdir=/Library/Fonts "
 
 # add homebrew to fpath and path
-
+export FPATH="$HOMEBREW_PREFIX/share/zsh/site-functions:$FPATH"
+export PATH="$HOMEBREW_PREFIX/{bin,sbin}:$PATH"
 export MANPATH="$HOMEBREW_PREFIX/share/man:$MANPATH"
 export MANPATH="$HOMEBREW_PREFIX/manpages:$MANPATH"
 export PATH="$HOMEBREW_PREFIX/bin:$PATH"
-
-export FPATH="$HOMEBREW_PREFIX/share/zsh/site-functions:$FPATH"
-export PATH="$HOMEBREW_PREFIX/{bin,sbin}:$PATH"
 
 
 # helps compilers find curl and other dependencies in homebrew
