--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -242,6 +242,7 @@ jobs:
     name: ${{ matrix.name }}
     needs: syntax
     runs-on: ${{ matrix.runs-on }}
+    container: ${{ matrix.container }}
     strategy:
       matrix:
         include:
@@ -259,7 +260,8 @@ jobs:
             runs-on: ubuntu-22.04
           - name: tests (Ubuntu 20.04)
             test-flags: --coverage
-            runs-on: ubuntu-20.04
+            runs-on: ubuntu-latest
+            container: ghcr.io/homebrew/ubuntu20.04:latest
           - name: tests (macOS 13 x86_64)
             test-flags: --coverage
             runs-on: macos-13
@@ -364,12 +366,15 @@ jobs:
     strategy:
       matrix:
         include:
+          - name: test default formula (Ubuntu 24.04)
+            runs-on: ubuntu-latest
+            container: ghcr.io/homebrew/ubuntu24.04:latest
           - name: test default formula (Ubuntu 22.04)
             runs-on: ubuntu-latest
             container: ghcr.io/homebrew/ubuntu22.04:master
           - name: test default formula (Ubuntu 20.04)
             runs-on: ubuntu-latest
-            container: ghcr.io/homebrew/ubuntu20.04
+            container: ghcr.io/homebrew/ubuntu20.04:latest
           - name: test default formula (macOS 13 x86_64)
             runs-on: macos-13
           - name: test default formula (macOS 15 arm64)
