--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -27,6 +27,10 @@ jobs:
       matrix:
         version: ["18.04", "20.04", "22.04", "24.04"]
         arch: ["x86_64", "arm64"]
+        exclude:
+          - version: "18.04"
+             architecture: "arm64"
+          - architecture: ${{ github.event_name == 'release' && 'arm64' }}
     outputs:
       tags: ${{ steps.attributes.outputs.tags }}
       push: ${{ steps.attributes.outputs.push }}
