--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -29,8 +29,8 @@ jobs:
         arch: ["x86_64", "arm64"]
         exclude:
           - version: "18.04"
-            architecture: "arm64"
-          - architecture: ${{ github.event_name == 'release' && 'arm64' }}
+            arch: "arm64"
+          - arch: ${{ github.event_name == 'release' && 'arm64' }}
     outputs:
       tags: ${{ steps.attributes.outputs.tags }}
       push: ${{ steps.attributes.outputs.push }}
